Adding core report

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ android:
 jobs:
   include:
   - stage: test
-    script: ./gradlew clean test
+    script: ./gradlew clean test jacocoTestReport
   - stage: detekt
     script: ./gradlew clean detektCheck
 
